--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ footer ul{	padding-left: 0;	list-style: none;}
 
 .icon{
     color: #FF17E9;
-    padding: 0px 23px;
+    margin-left: 13px;
 }
 
 .logo{
